# reworkit

./: Cargo.toml
.sqlx/: query-3f1bc313320dbb5e59617cab85d9ce4c28bb2384a5a8bca7b9e8fcfdc59a40ca.json  query-3f45478efed531c9a03a41eb03da5f23eaaee1ab418f7c288ce86215a4fd6037.json  query-7dc6dd10d1f683279caefcd7d81c7a6fc3a85eabcf4a0f0f00b6a547edf4f854.json
migrations/: 20241229054713_create-table.sql
src/: db.rs  main.rs
worker/: Cargo.toml
worker/src/: main.rs
