[package]
name = "reworkit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "macros"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace]
members = ["worker"]