[package]
name = "reworkit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "macros"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
redis = { version = "0.25.4", features = ["tokio-comp"] }
async-compression = { version = "0.4", features = ["gzip", "tokio"] }

[workspace]
members = ["worker"]
